--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <title>KurdAI Pro - نیشتمانیترین ژیریی دەستکردی کوردی</title>
     
     <!-- SEO & Social Meta Tags -->
-    <meta name="description" content="KurdAI Pro: یەکەمین و پێشکەوتووترین پلاتفۆرمی ژیریی دەستکردی تایبەت بە هەرێمی کوردستان بۆ خزمەتگوزارییە زیرەکەکان.">
+    <meta name="description" content="KurdAI Pro: یەکەمین و پێشکەوتووترین پلاتفۆرمی ژیریی دەستکردی تایبەت بە هەرێمی کوردستان.">
     <meta property="og:title" content="KurdAI Pro - National AI Platform">
-    <meta property="og:description" content="ژیریی نیشتمانی بۆ خزمەتگوزارییە زانستی، تەندروستی و کولتوورییەکان لە کوردستان.">
+    <meta property="og:description" content="ژیریی نیشتمانی بۆ خزمەتگوزارییە زانستی، تەندروستی و کولتوورییەکان.">
     <meta property="og:image" content="https://images.unsplash.com/photo-1644342352822-5f606821262d?q=80&w=1200&auto=format&fit=crop">
     <meta property="og:type" content="website">
-    <meta name="twitter:card" content="summary_large_image">
     
     <!-- PWA Primary Meta Tags -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -77,15 +76,18 @@
 <script type="importmap">
 {
   "imports": {
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3"
+    "vite": "https://esm.sh/vite@^7.3.1"
   }
 }
 </script>
 </head>
 <body>
     <div id="root"></div>
+    <!-- Vite ڕاستەوخۆ دەست بەسەر ئەم سکریپتەدا دەگرێت و وەریدەگێڕێت -->
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
